--- a/indexDef.css
+++ b/indexDef.css
@@ -1,4 +1,5 @@
 /* Default ----   < 400px */
+
 * {
     margin: 0;
     padding: 0;
@@ -11,47 +12,29 @@
 .bannerInicio{
     background-color: #e4dbbe;
     width: 100%;
-    height: 450px;
-    margin-top: 60px;
+    height: 50px;
     position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.doodleInicio{
-    background-image: url(img/doodleInicio.png);
-    background-repeat: no-repeat;
-    width: 100%;
-    height: 450px;
-    position: absolute;
+/* ===================== MEDIA QUERY  400px - 800px  ================================= */
+@media (min-width: 400px) {
+
 }
 
-.imagenInicio{
-    background-image: url(img/imagenInicio.png);
-    background-size: contain; 
-    background-repeat: no-repeat;
-    background-position: right center; 
-    width: 370px; 
-    height: 370px;
-    position: absolute; 
-    right: 30px; 
-    top: 45%; 
-    transform: translateY(-50%); 
+/* ===================== MEDIA QUERY  801px - 1200px  ================================= */
+@media (min-width: 801px) {
+
 }
 
-.tituloInicio {
-    font-family: "Anton", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 5rem;
-    position: absolute; 
-    left: 10%; 
-    top: 50%; 
-    transform: translateY(-50%); 
-    color: #98a533; 
+/* ===================== MEDIA QUERY  1201px - 1600px  ================================= */
+@media (min-width: 1201px) {
+
 }
 
-.tituloInicio  span{
-    color: #d35318; 
+/* ===================== MEDIA QUERY  1601px  ================================= */
+@media (min-width: 1601px) {
+
 }
