--- a/indexDef.css
+++ b/indexDef.css
@@ -29,6 +29,16 @@
     position: absolute;
 }
 
+.imagenInicio{
+    background-image: url(img/imagenInicio.png);
+    background-size: contain; 
+    background-repeat: no-repeat;
+    background-position: calc(100% - 40px) center; 
+    width: 100%; 
+    height: 100%;
+    position: absolute; 
+}
+
 /* ===================== MEDIA QUERY  400px - 800px  ================================= */
 @media (min-width: 400px) {
 
