--- a/indexDef.css
+++ b/indexDef.css
@@ -1,5 +1,4 @@
-/* Default ----   < 400px */
-
+/* Default ---- < 400px */
 * {
     margin: 0;
     padding: 0;
@@ -9,60 +8,61 @@
     background-color: white;
 }
 
-.bannerInicio{
+.bannerInicio {
     background-color: #e4dbbe;
     width: 100%;
     height: auto;
-    min-height: 350px;
-    position: relative;
+    min-height: 100px;  /* Ajustamos la altura mínima */
     display: flex;
-    align-items: center;
-    justify-content: center;
 }
 
-.doodleInicio{
+.doodleInicio {
     background-image: url(img/doodleInicio.png);
     background-repeat: no-repeat;
     background-size: contain;
     width: 100%;
-    height: 100%;
-    position: absolute;
+    height: auto;
 }
 
-.imagenInicio{
-    background-image: url(img/imagenInicio.png);
-    background-size: contain; 
-    background-repeat: no-repeat;
-    background-position: calc(100% - 40px) center; 
-    width: 100%; 
-    height: 100%;
-    position: absolute; 
-}
 
-/* ===================== MEDIA QUERY  400px - 800px  ================================= */
+/* ===================== MEDIA QUERY  400px - 500px  ================================= */
 @media (min-width: 400px) {
-    .bannerInicio{
-        min-height: 400px;
+    .bannerInicio {
+        min-height: 130px;  /* Ajustamos la altura mínima */
+    }
+}
+
+/* ===================== MEDIA QUERY  500px - 800px  ================================= */
+@media (min-width: 501px) {
+    .bannerInicio {
+        min-height: 190px;  /* Ajustamos la altura mínima */
+    }
+}
+
+/* ===================== MEDIA QUERY  801px - 1000px  ================================= */
+@media (min-width: 801px) {
+    .bannerInicio {
+        min-height: 250px;
     }
 }
 
 /* ===================== MEDIA QUERY  801px - 1200px  ================================= */
-@media (min-width: 801px) {
-    .bannerInicio{
-        min-height: 500px;
+@media (min-width: 1001px) {
+    .bannerInicio {
+        min-height: 350px;
     }
 }
 
 /* ===================== MEDIA QUERY  1201px - 1600px  ================================= */
 @media (min-width: 1201px) {
-    .bannerInicio{
-        min-height: 600px;
+    .bannerInicio {
+        min-height: 405px;
     }
 }
 
 /* ===================== MEDIA QUERY  1601px  ================================= */
 @media (min-width: 1601px) {
-    .bannerInicio{
-        min-height: 700px;
+    .bannerInicio {
+        min-height: 510px;
     }
 }
