--- a/indexDef.css
+++ b/indexDef.css
@@ -14,6 +14,7 @@
     height: auto;
     min-height: 100px;  /* Ajustamos la altura mínima */
     display: flex;
+    position: relative;
 }
 
 .doodleInicio {
@@ -24,18 +25,49 @@
     height: auto;
 }
 
+.imagenInicio{
+    background-image: url(img/imagenInicio.png);
+    background-size: contain; 
+    background-repeat: no-repeat;
+    background-position: right center; 
+    width: 100%; 
+    height: 100%;
+}
+
+.tituloInicio {
+    font-family: "Anton", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 1rem;
+    color: #98a533; 
+    position: absolute;
+    top: 30%;  /* Centra el título verticalmente */
+    right: 40%;
+}
+
+.tituloInicio  span{
+    color: #d35318; 
+}
 
 /* ===================== MEDIA QUERY  400px - 500px  ================================= */
 @media (min-width: 400px) {
     .bannerInicio {
-        min-height: 130px;  /* Ajustamos la altura mínima */
+        min-height: 130px;  
+    }
+
+    .tituloInicio {
+        font-size: 1.5rem;
     }
 }
 
 /* ===================== MEDIA QUERY  500px - 800px  ================================= */
 @media (min-width: 501px) {
     .bannerInicio {
-        min-height: 190px;  /* Ajustamos la altura mínima */
+        min-height: 190px; 
+    }
+
+    .tituloInicio {
+        font-size: 2rem;
     }
 }
 
@@ -43,6 +75,10 @@
 @media (min-width: 801px) {
     .bannerInicio {
         min-height: 250px;
+    }
+
+    .tituloInicio {
+        font-size: 3rem;
     }
 }
 
@@ -58,11 +94,19 @@
     .bannerInicio {
         min-height: 405px;
     }
+
+    .tituloInicio {
+        font-size: 4rem;
+    }
 }
 
 /* ===================== MEDIA QUERY  1601px  ================================= */
 @media (min-width: 1601px) {
     .bannerInicio {
         min-height: 510px;
+    }
+
+    .tituloInicio {
+        font-size: 5rem;
     }
 }
