--- a/indexDef.css
+++ b/indexDef.css
@@ -352,7 +352,7 @@ div#productoPescado .flecha{
     font-family: 'Gagalin';
 }
 
-footer{
+/* footer{
     background-color: #e4dbbe;
     width: 100%;
     height: 350px;
@@ -365,7 +365,7 @@ div.doodleFooter{
     background-repeat: no-repeat;
     width: 100%;
     height: 350px;
-}
+} */
 
 
 
