--- a/indexDef.css
+++ b/indexDef.css
@@ -4,6 +4,11 @@
     padding: 0;
 }
 
+main {
+    min-height: auto; /* Ajusta la altura del contenido automáticamente */
+    height: auto; /* Si usas un valor de height, puede causar el espacio adicional */
+}
+
 :root{
     background-color: white;
 }
