--- a/indexDef.css
+++ b/indexDef.css
@@ -5,8 +5,8 @@
 }
 
 main {
-    min-height: auto; /* Ajusta la altura del contenido automáticamente */
-    height: auto; /* Si usas un valor de height, puede causar el espacio adicional */
+    min-height: auto; 
+    height: auto; 
 }
 
 :root{
@@ -16,11 +16,11 @@ main {
 .bannerInicio {
     background-color: #e4dbbe;
     width: 100%;
-    height: auto;
-    min-height: 100px;  /* Ajustamos la altura mínima */
+    height: 40vh;  
     display: flex;
     position: relative;
 }
+
 
 .doodleInicio {
     background-image: url(img/doodleInicio.png);
@@ -357,20 +357,107 @@ div#productoPescado .flecha{
     font-family: 'Gagalin';
 }
 
-/* footer{
-    background-color: #e4dbbe;
+footer{
+    background-color: #98a533;
     width: 100%;
-    height: 350px;
+    height: auto;
+    min-height: 120px;
     margin-top: 60px;
     position: relative;
 }
 
-div.doodleFooter{
-    background-image: url(img/doodleInicio.png);
+.contenedorContacto{
+    background-color: #e4dbbe;
+    width: 60%;
+    height: 80px;
+    position: absolute;
+    top: 10%;
+    right: 38%;
+    border-radius: 10px;
+}
+
+.doodleFooter{
+    background-image: url('/img/doodleInicio.png');
     background-repeat: no-repeat;
+    background-size: contain; 
     width: 100%;
-    height: 350px;
-} */
+    height: 80px;
+}  
+
+.contenedorLogo{
+    background-color: #e4dbbe;
+    width: 30%;
+    height: 52px;
+    position: absolute;
+    top: 10%;
+    right: 2%;
+    border-radius: 10px;
+    display: flex;  
+    justify-content: center; 
+    align-items: center;
+}
+
+.contenedorLogo img{
+    width: 45px;
+    height: auto;
+}
+
+.contenedorRedes {
+    background-color: #e4dbbe;
+    width: 30%;
+    height: 20px;
+    position: absolute;
+    top: 60%;
+    right: 2%;
+    border-radius: 10px;
+    display: flex; 
+    align-items: center; 
+    justify-content: center; 
+}
+
+.contenedorRedes ul {
+    list-style: none; 
+    padding: 0;
+    margin: 0;
+    display: flex; 
+    gap: 10px; 
+}
+
+.contenedorRedes ul li {
+    display: inline-block;
+    font-size: 3pt; 
+    padding: 5px 10px;
+    border-radius: 5px;
+}
+
+
+
+.contenedorPrivacidad{
+    background-color: #e4dbbe;
+    width: 97%;
+    height: 15px;
+    position: absolute;
+    top: 85%;
+    right: 1.5%;
+    border-radius: 10px;
+    font-size: 3pt;
+    text-decoration: underline;
+    display: flex;  
+    justify-content: center; 
+    align-items: center;
+}
+
+.contenedorPrivacidad ul{
+    list-style: none; 
+    padding: 0; 
+    margin: 0;
+    
+}
+
+.contenedorPrivacidad ul li {
+    display: inline;
+    margin-right: 10px; 
+}
 
 
 
@@ -397,6 +484,14 @@ div.doodleFooter{
     #tituloProduc{
         left: 37%;
     }
+
+    footer{
+        min-height: 130px;
+    }
+    
+    .doodleFooter{
+        height: 130px;
+    } 
 }
 
 /* ===================== MEDIA QUERY  500px - 800px  ================================= */
@@ -416,6 +511,14 @@ div.doodleFooter{
     #tituloProduc{
         left: 40%;
     }
+
+    footer{
+        min-height: 190px;
+    }
+    
+    .doodleFooter{
+        height: 190px;
+    } 
 }
 
 /* ===================== MEDIA QUERY  801px - 1000px  ================================= */
@@ -443,6 +546,14 @@ div.doodleFooter{
         font-size: 3rem;
         left: 40%;
     }
+
+    footer{
+        min-height: 250px;
+    }
+    
+    .doodleFooter{
+        height: 250px;
+    } 
 }
 
 /* ===================== MEDIA QUERY  801px - 1200px  ================================= */
@@ -536,6 +647,14 @@ div.doodleFooter{
         font-size: 3.5rem;
         left: 40%;
     }
+
+    footer{
+        min-height: 350px;
+    }
+    
+    .doodleFooter{
+        height: 350px;
+    } 
 }
 
 /* ===================== MEDIA QUERY  1201px - 1600px  ================================= */
@@ -637,6 +756,14 @@ div.doodleFooter{
         font-size: 4rem;
         left: 40%;
     }
+
+    footer{
+        min-height: 405px;
+    }
+    
+    .doodleFooter{
+        height: 405px;
+    } 
 }
 
 /* ===================== MEDIA QUERY  1601px  ================================= */
@@ -652,4 +779,12 @@ div.doodleFooter{
     .promocionIncio{
         min-height: 70px;
     }
+
+    footer{
+        min-height: 510px;
+    }
+    
+    .doodleFooter{
+        height: 510px;
+    } 
 }
