--- a/leche/css/receta_queso.css
+++ b/leche/css/receta_queso.css
@@ -17,7 +17,7 @@ body{
 
 #tituloReceta{
     font-family: 'Chunkfive';
-    font-size: 30px;
+    font-size: 24px;
     text-align: center;
     margin-top: 30px;
     color: #77b4d8;
@@ -74,7 +74,7 @@ body{
 
 .opcionLeche img {
     width: 38px;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 
 
@@ -82,19 +82,19 @@ body{
 /* ===================== MEDIA QUERY  400px - 500px  ================================= */
 @media (min-width: 400px) {
     .opcionLeche img {
-        width: 90px;
+        width: 47px;
     }
 
     .opcionLeche {
-        font-size: 27px;
+        font-size: 17px;
     }
 
     .opcionesLeche h2{
-        font-size: 24px;
+        font-size: 20px;
     }
 
     #tituloReceta{
-        font-size: 35px;
+        font-size: 28px;
     }
 
     #objetivoReceta{
@@ -105,19 +105,55 @@ body{
 /* ===================== MEDIA QUERY  500px - 800px  ================================= */
 @media (min-width: 501px) {
     .opcionLeche img {
-        width: 100px;
+        width: 57px;
     }
 
     .opcionLeche {
-        font-size: 28px;
+        font-size: 19px;
+        margin: 15px;
+        padding: 24px;
+    }
+
+    .opcionesLeche{
+        max-width: 580px;   
     }
 
     .opcionesLeche h2{
-        font-size: 27px;
+        font-size: 22px;
     }
 
     #tituloReceta{
-        font-size: 35px;
+        font-size: 33px;
+    }
+
+    #objetivoReceta{
+        font-size: 17px;
+    }
+}
+
+/* ===================== MEDIA QUERY  801px - 1000px  ================================= */
+@media (min-width: 801px) {
+    .opcionLeche img {
+        width: 70px;
+    }
+
+    .opcionLeche {
+        font-size: 21px;
+        margin: 17px;
+        margin-left: 22px;
+        margin-right: 22px;
+    }
+
+    .opcionesLeche{
+        max-width: 700px;   
+    }
+
+    .opcionesLeche h2{
+        font-size: 24px;
+    }
+
+    #tituloReceta{
+        font-size: 38px;
     }
 
     #objetivoReceta{
@@ -125,18 +161,25 @@ body{
     }
 }
 
-/* ===================== MEDIA QUERY  801px - 1000px  ================================= */
-@media (min-width: 801px) {
+/* ===================== MEDIA QUERY  1001px - 1200px  ================================= */
+@media (min-width: 1001px) {
     .opcionLeche img {
-        width: 110px;
+        width: 80px;
     }
 
     .opcionLeche {
-        font-size: 30px;
+        font-size: 22px;
+        margin: 18px;
+        margin-left: 30px;
+        margin-right: 30px;
+    }
+
+    .opcionesLeche{
+        max-width: 780px;   
     }
 
     .opcionesLeche h2{
-        font-size: 29px;
+        font-size: 25px;
     }
 
     #tituloReceta{
@@ -144,22 +187,33 @@ body{
     }
 
     #objetivoReceta{
-        font-size: 20px;
+        font-size: 19px;
     }
 }
 
-/* ===================== MEDIA QUERY  1001px - 1200px  ================================= */
-@media (min-width: 1001px) {
+/* ===================== MEDIA QUERY  1201px - 1600px  ================================= */
+@media (min-width: 1201px) {
     .opcionLeche img {
-        width: 120px;
+        width: 100px;
     }
 
     .opcionLeche {
-        font-size: 31px;
+        font-size: 22px;
+        margin: 18px;
+        margin-left: 40px;
+        margin-right: 40px;
+    }
+
+    .opcionesLeche{
+        max-width: 900px;   
+    }
+
+    .opcionesLeche h2{
+        font-size: 27px;
     }
 
     #tituloReceta{
-        font-size: 50px;
+        font-size: 45px;
     }
 
     #objetivoReceta{
@@ -167,30 +221,7 @@ body{
     }
 }
 
-/* ===================== MEDIA QUERY  1201px - 1600px  ================================= */
-@media (min-width: 1201px) {
-    .opcionLeche img {
-        width: 130px;
-    }
-
-    .opcionLeche {
-        font-size: 32px;
-    }
-
-    .opcionesLeche h2{
-        font-size: 31px;
-    }
-
-    #tituloReceta{
-        font-size: 55px;
-    }
-
-    #objetivoReceta{
-        font-size: 24px;
-    }
-}
-
 /* ===================== MEDIA QUERY  1601px  ================================= */
-@media (min-width: 1601px) {
+/* @media (min-width: 1601px) {
     
-}
+} */
