--- a/aceite/css/aceite_menu.css
+++ b/aceite/css/aceite_menu.css
@@ -122,7 +122,7 @@ label {
 	}
 }
 
-/* > 1000px */
+/* 1000px - 1400px */
 @media (min-width:1000px) {
 	#menus li a {
 		font-size:17.9px;
@@ -130,6 +130,28 @@ label {
 	#menus li a#home{
 		width: 4%;
 		font-size:15.5px;
+	}
+}
+
+/* 1400px - 1600px */
+@media (min-width:1400px) {
+	#menus li a {
+		font-size:17.9px;
+	}
+	#menus li a#home{
+		width: 4%;
+		font-size:15.7px;
+	}
+}
+
+/* 1600px - 2200px */
+@media (min-width:1600px) {
+	#menus li a {
+		font-size:18.8px;
+	}
+	#menus li a#home{
+		width: 4%;
+		font-size:16.4px;
 	}
 }
 
